--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /.idea
 /venv
 /main/__pycache__
-/office_market/__pycache__
+/food_delivery/__pycache__
+/food_delivery/settings1.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,pycharm
