--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /venv
 /main/__pycache__
 /food_delivery/__pycache__
+/more_details.md
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,pycharm
